# capvicam

./: Cargo.toml  README.md  build.rs
src/: capture.rs  error.rs  main.rs  mjpeg.rs
src/utils/: ioctl.c  ioctl.rs
